// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> should add additional class if provided 1`] = `
<span
  class="root undefined centered"
  data-testid="text"
>
  Hello
</span>
`;

exports[`<Text /> should render caption text 1`] = `
<span
  class="root caption"
  data-testid="text"
>
  Hello
</span>
`;

exports[`<Text /> should render subtitle text 1`] = `
<span
  class="root subtitle"
  data-testid="text"
>
  Hello
</span>
`;

exports[`<Text /> should render the text 1`] = `
<span
  class="root undefined"
  data-testid="text"
>
  Hello
</span>
`;

exports[`<Text /> should render title text 1`] = `
<span
  class="root title"
  data-testid="text"
>
  Hello
</span>
`;
